tests/fail/include_with_default.werk
include "included"

#!file included=default target="foo"
